temporarily fixed bug with items not showing on IOS. Smoothscroll for iOS is now disabled.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,7 +3,7 @@
 
 * {
   box-sizing: border-box;
-  -webkit-overflow-scrolling: touch; // smooth scroll on iOS
+  // -webkit-overflow-scrolling: touch; // smooth scroll on iOS
     ::-webkit-scrollbar { 
       display: none; 
   }
